fix layout issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,48 +6,75 @@
 
 body {
   margin: 0;
-  font-family: 'roboto', Arial, Helvetica, sans-serif;
+  font-family: "roboto", Arial, Helvetica, sans-serif;
 }
 
 main {
   min-height: 100vh;
   padding: 25px;
+  background-color: lightgray;
 }
 
 .search-box {
   text-align: center;
   width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 0;
+  margin-left: 0;
   margin-bottom: 30px;
-  display:flex;
+  display: flex;
+  justify-content: center;
 }
 
-.search-box .search-bar {
-  text-align: left;
-  display: block;
+.search-box .search-bar-holder {
+  text-align: center;
+  display: inline-block;
+  max-height: 50px;
+  max-width: 100%;
   width: 100%;
-  margin-left: 15px;
-  margin-right: 15px;
-  padding: 15px;
-  appearance: none;
-  border: none;
-  outline: none;
-  background-color:azure;
-  border-radius: 16px 16px 16px 16px;
-  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
-  font-size: 22px;
+  text-align: center;
+  display: flex;
 }
 
 .search-box .addEntries {
-  margin-left: 30%;
+  margin-left: 10%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
-.search-box .search {
-  margin-right: 30%;
+.search-box .addEntries .addButton {
+  background-color: transparent;
+  appearance: None;
+  border: None;
+  max-height: 50px;
 }
 
-.search-box .addEntries, .search-box .search {
+.search-box .addEntries .form {
+  margin-left: 10%;
+  background-color: antiquewhite;
+  padding: 15px;
+  border-radius: 15px;
+  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+.search-box .search-bar-holder .search {
+  margin-right: 3%;
+}
+
+.search-box .search-bar-holder .search-bar {
+  width: 50%;
+  padding: 15px;
+  display: block;
+  border-radius: 15px;
+  border: none;
+  outline: none;
+  margin-left: 10%;
+  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+  margin-right: 1%;
+}
+
+.search-box .addEntries .addButton,
+.search-box .search-bar-holder .search {
   padding: 15px;
   border-radius: 12px;
   border: none;
@@ -55,8 +82,21 @@ main {
   font-size: 15px;
   background-color: antiquewhite;
 }
-.search-box .addEntries:hover, .search-box .search:hover, .dayEntry .deleteEntry:hover, .dayEntry .editEntry:hover {
-  background-color:bisque;
+.search-box .addEntries .addButton:hover,
+.search-box .search:hover,
+.dayEntry .deleteEntry:hover,
+.dayEntry .editEntry:hover {
+  background-color: bisque;
+}
+
+.dayEntry .editEntry .editButton {
+  background-color: transparent;
+  border: None;
+}
+
+.dayEntry .deleteEntry .deleteButton {
+  background-color: transparent;
+  border: None;
 }
 
 .dayEntry {
@@ -71,16 +111,25 @@ main {
   justify-content: center;
 }
 
-.dayEntry .miles-ran, .dayEntry .average-pace, .dayEntry .time, .dayEntry .additional-notes, .dayEntry .editEntry, .dayEntry .deleteEntry {
+.dayEntry .miles-ran,
+.dayEntry .average-pace,
+.dayEntry .time,
+.dayEntry .additional-notes,
+.dayEntry .editEntry,
+.dayEntry .deleteEntry {
   padding: 12px;
 }
 
-.dayEntry .miles-ran, .dayEntry .average-pace, .dayEntry .time, .dayEntry .additional-notes{
+.dayEntry .miles-ran,
+.dayEntry .average-pace,
+.dayEntry .time,
+.dayEntry .additional-notes {
   font-size: 17px;
   text-shadow: 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-.dayEntry .editEntry, .dayEntry .deleteEntry {
+.dayEntry .editEntry,
+.dayEntry .deleteEntry {
   background-color: antiquewhite;
   border-radius: 15px;
   border: none;
@@ -92,6 +141,7 @@ main {
   float: right;
   position: absolute;
   right: 10%;
+  z-index: 1;
 }
 
 .dayEntry .deleteEntry {
@@ -100,12 +150,12 @@ main {
   right: 20%;
 }
 
-.dayEntry .average-pace{
+.dayEntry .average-pace {
   position: absolute;
   left: 20%;
 }
 
-.dayEntry .time{
+.dayEntry .time {
   position: absolute;
   left: 30%;
 }
